<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    tools:context=".HomeActivity">

    <Button
        android:id="@+id/btnOrganisation"
        style="@style/DepartmentStyle"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@color/app_bg"
        android:text="@string/organisation"
        android:onClick="onClick"
        app:layout_constraintEnd_toStartOf="@+id/btnEmployee"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnEmployee"
        style="@style/DepartmentStyle"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@color/app_bg"
        android:text="Thêm nhân viên"
        android:onClick="onClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnOrganisation"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnProfile"
        style="@style/DepartmentStyle"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/app_bg"
        android:onClick="onClick"
        android:text="@string/employee_info"
        app:layout_constraintEnd_toStartOf="@+id/btnEmployee"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnOrganisation" />

    <Button
        android:id="@+id/btnNotice"
        style="@style/DepartmentStyle"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/app_bg"
        android:onClick="onClick"
        android:text="@string/notice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnProfile"
        app:layout_constraintTop_toBottomOf="@id/btnOrganisation" />
</androidx.constraintlayout.widget.ConstraintLayout>