<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmployeeInfoActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:id="@+id/llIamge"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/colorPrimaryDark"
                android:orientation="vertical"
                >
                <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@android:drawable/btn_star_big_on">
                </ImageView>
                <ImageButton
                    android:id="@+id/btnEdit"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:layout_toRightOf="@id/avatar"
                    android:background="@android:drawable/ic_media_ff">
                </ImageButton>
                <TextView
                    android:id="@+id/tvTitleName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Luu Quang Hieu"
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/white"
                    android:background="@color/app_bg"
                    android:layout_below="@id/avatar"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:textSize="20sp"></TextView>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llIamge"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    style="@style/BigDarkText"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:background="@color/lightGrey"
                    android:text="@string/general_info"></TextView>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/grey_border"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:text="@string/full_name" />

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="Luu Quang Hieu" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/grey_border"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:text="@string/birthday" />

                    <TextView
                        android:id="@+id/tvBirthday"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="8/6/1988" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/grey_border"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:text="@string/department" />

                    <TextView
                        android:id="@+id/tvDepartment"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="Team Android" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/grey_border"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:text="@string/gender" />

                    <TextView
                        android:id="@+id/tvGender"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="Nam" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/grey_border"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:text="@string/job_family" />

                    <TextView
                        android:id="@+id/tvJob"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="Lập trình viên" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/grey_border"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:text="@string/status" />

                    <TextView
                        android:id="@+id/tvStatus"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="Độc thân" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/grey_border"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:text="@string/email" />

                    <TextView
                        android:id="@+id/tvEmail"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="hieuluu@gmail.com" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/grey_border"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:text="@string/add" />

                    <TextView
                        android:id="@+id/tvAdd"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="Xa La, Hà Đông, Hà Nội, Việt Nam" />
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    style="@style/BigDarkText"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:background="@color/lightGrey"
                    android:text="@string/general_info"></TextView>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/grey_border"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:text="@string/salary" />

                    <TextView
                        android:id="@+id/tvSalary"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="10.000.000" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/grey_border"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:text="@string/congtrac_end" />

                    <TextView
                        android:id="@+id/tvContractEnd"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="6/8/2022" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>