<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".views.home.HomeActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent">
        <include layout="@layout/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></include>
    </com.google.android.material.appbar.AppBarLayout>
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_vnpt"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        ></ImageView>
    <Button
        android:id="@+id/btnOrganisation"
        style="@style/DepartmentStyle"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:background="@drawable/button_blue_bg"
        android:text="@string/organisation_list"
        android:onClick="onClick"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toStartOf="@+id/btnAddEmployee"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgLogo"
         />

    <Button
        android:id="@+id/btnAddEmployee"
        style="@style/DepartmentStyle"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:text="Thêm nhân viên"
        android:background="@drawable/button_blue_bg"
        android:onClick="onClick"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnOrganisation"
        app:layout_constraintTop_toBottomOf="@id/imgLogo"/>

    <Button
        android:id="@+id/btnProfile"
        style="@style/DepartmentStyle"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_blue_bg"
        android:onClick="onClick"
        android:text="@string/employee_info"
        app:layout_constraintEnd_toStartOf="@+id/btnAddEmployee"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnOrganisation" />

    <Button
        android:id="@+id/btnNotice"
        style="@style/DepartmentStyle"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_blue_bg"
        android:onClick="onClick"
        android:text="@string/notice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnProfile"
        app:layout_constraintTop_toBottomOf="@id/btnOrganisation" />
</androidx.constraintlayout.widget.ConstraintLayout>